add responsive part

--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="img-row-second">
+                        <div class="img-row-second1">
                             <div class="image-item">
                                 <img src="https://m.media-amazon.com/images/M/MV5BNzY5MDQzOTAwNV5BMl5BanBnXkFtZTcwNTY0NTk1Nw@@._V1_QL75_UX311_.jpg"
                                     alt="Boolywood">
@@ -295,7 +295,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="img-row-second">
+                        <div class="img-row-second2">
                             <div class="image-item">
                                 <img src="https://images.wallpapersden.com/image/download/deepika-padukone-in-ram-leela_aG5pZWuUmZqaraWkpJRmbmdlrWZlam0.jpg"
                                     alt="Boolywood">
@@ -318,7 +318,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="img-row-second">
+                        <div class="img-row-second3">
                             <div class="image-item">
                                 <img src="https://i.pinimg.com/736x/0c/95/45/0c95456fc0aa449d203c184fe385c1d1.jpg"
                                     alt="bollywood">
@@ -356,7 +356,7 @@
                     </div>
 
                     <div class="img-container_two">
-                        <div class="img-row-third">
+                        <div class="img-row-third1">
                             <div class="img-item-second-row">
                                 <img src="https://i.pinimg.com/236x/d6/bf/e7/d6bfe7c419e7e777eaa6c330d6dc51b9.jpg"
                                     alt="Boolywood">
@@ -379,7 +379,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="img-row-third">
+                        <div class="img-row-third2">
                             <div class="img-item-second-row">
                                 <img src="https://i.pinimg.com/236x/12/7a/49/127a49cd38422be6b4c97ed38606d3f9.jpg"
                                     alt="Little Krishna">
@@ -402,7 +402,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="img-row-third">
+                        <div class="img-row-third3">
                             <div class="img-item-second-row">
                                 <img src="https://i.pinimg.com/474x/9c/32/59/9c3259316712cc077b8f2336a8f6536f.jpg"
                                     alt="Badrinaath">
@@ -425,7 +425,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="img-row-forth">
+                        <div class="img-row-forth1">
                             <div class="img-item-second-row">
                                 <img src="https://i.pinimg.com/236x/20/90/26/2090264b3a79f66b5fcec1d38009393a.jpg"
                                     alt="Bablu-Dablu-Cubs">
@@ -448,7 +448,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="img-row-forth">
+                        <div class="img-row-forth2">
                             <div class="img-item-second-row">
                                 <img src="https://i.pinimg.com/236x/6f/b0/e6/6fb0e6c3a5e05f1685a0e441a234afec.jpg"
                                     alt="Sunset Over Ocean">
@@ -471,7 +471,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="img-row-forth">
+                        <div class="img-row-forth3">
                             <div class="img-item-second-row">
                                 <img src="https://t4.ftcdn.net/jpg/09/07/82/47/240_F_907824791_WAce6o9HCCPVptj4ftDDKBJ9KhkvSBAd.jpg"
                                     alt="lord-krishna-vector">
@@ -495,7 +495,7 @@
                             </div>
                         </div>
 
-                        <div class="img-row-forth">
+                        <div class="img-row-forth4">
                             <div class="img-item-second-row">
                                 <img src="https://storage.googleapis.com/dev-cms-image-test/movie/3/1066143/img145210/6929453/1066143_6929453.jpg"
                                     alt="lord-krishna-vector">
@@ -519,6 +519,10 @@
                             </div>
                         </div>
                     </div>
+
+
+
+                    
 
                     <div class="image-container-row">
                         <div class="image-row-box-one">
