Change content in mobile responsive

--- a/index.html
+++ b/index.html
@@ -80,7 +80,8 @@
                                 <div class="images-box1">
                                     <img src="all_images/subscriptions_icon.png" alt="Subscriptions">
                                 </div>
-                                <div class="tittlebox1">Subscriptions</div>
+                                <div class="Subscriptions-tittlebox1">Subscriptions</div>
+                                <div class="Subscriptions-box12">Subs</div>
                             </div>
 
                             <div class="section-tittle-col1">
