Changed icons and css

--- a/index.html
+++ b/index.html
@@ -13,23 +13,26 @@
             <nav class="header_one">
                 <div class="navbar-left-icon">
                     <div class="menu-icon">
-                        <img src="all_images/menu-icon.png" alt="menu icon">
+                        <!-- <img src="all_images/menu-icon.png" alt="menu icon"> -->
+                         <div class="menu-baar"></div>
+                         <div class="menu-baar"></div>
+                         <div class="menu-baar"></div>
                     </div>
                     <div class="youtubelogo-box">
                         <div class="youtubelogo">
-                            <img src="https://cdn3.iconfinder.com/data/icons/social-network-30/512/social-06-512.png"
+                            <img src="all_images/youtube_logo_resized.png"
                                 alt="youtube">
                         </div>
-                        <div class="textbox">YouTube</div>
+                        <!-- <div class="textbox">YouTube</div> -->
+                        <div class="inbox">IN</div>
                     </div>
-                    <div class="inbox">IN</div>
                 </div>
 
                 <div class="search-bar-container">
                     <div class="search-bar-row">
                         <input type="text" class="search-barrow-input" placeholder="Search">
                         <button class="search-button">
-                            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT75SELy7I8F_vR2KQwSl9kI92TgoGW26UtSA&s"
+                            <img src="all_images/search_icon.png"
                                 alt="Search">
                         </button>
                     </div>
@@ -59,13 +62,13 @@
                         <section class="section-tittle1">
                             <div class="homebox">
                                 <div class="homeimages-box1">
-                                    <img src="all_images/home.png" alt="Home">
+                                    <img src="https://img.icons8.com/m_rounded/200/FFFFFF/home.png" alt="Home">
                                 </div>
                                 <div class="hometittlebox1">Home</div>
                             </div>
                             <div class="homebox2">
                                 <div class="images-box2">
-                                    <img src="all_images/home.png" alt="Home">
+                                    <img src="https://img.icons8.com/m_rounded/200/FFFFFF/home.png" alt="Home">
                                 </div>
                                 <div class="hometittlebox2">Home</div>
                             </div>
@@ -81,11 +84,10 @@
                                     <img src="all_images/subscriptions_icon.png" alt="Subscriptions">
                                 </div>
                                 <div class="Subscriptions-tittlebox1">Subscriptions</div>
-                                <div class="Subscriptions-box12">Subs</div>
                             </div>
 
-                            <div class="section-tittle-col1">
-                                <div class="images-box1">
+                            <div class="sidebar-item-you-section ">
+                                <div class="sidebar-icon">
                                     <img src="all_images/account_circle_icon.png" alt="Youtubemusic">
                                 </div>
                                 <div class="tittlebox1">You</div>
@@ -108,15 +110,27 @@
                             </div>
                             <div class="section-tittle-col4">
                                 <div class="images-box4">
+                                    <img src="all_images/watch.png" alt="History">
+                                </div>
+                                <div class="tittlebox4">Watch Later</div>
+                            </div>
+                            <div class="section-tittle-col4">
+                                <div class="images-box4">
                                     <img src="all_images/smart_display_icon.png" alt="Your movie">
                                 </div>
-                                <div class="tittlebox4">Your movie</div>
+                                <div class="tittlebox4">Your videos</div>
                             </div>
                             <div class="section-tittle-col4">
                                 <div class="images-box4">
                                     <img src="all_images/like-icon.png" alt="liked">
                                 </div>
-                                <div class="tittlebox4">liked</div>
+                                <div class="tittlebox4">Liked videos</div>
+                            </div>
+                            <div class="section-tittle-col4">
+                                <div class="images-box4">
+                                    <img src="all_images/download.png" alt="liked">
+                                </div>
+                                <div class="tittlebox4">Download</div>
                             </div>
                         </section>
                         <div class="underline1"></div>
@@ -127,15 +141,14 @@
                             <div class="section-tittle-col3">
                                 <div class="images-box3">
                                     <img src="https://www.shutterstock.com/image-vector/lions-head-full-color-600nw-1432918391.jpg"
-                                        alt="History">
+                                        alt="Watch later">
                                 </div>
-                                <div class="main-img-tittle-box">
-                                    <div class="tittlebox3">ThePrimeTime</div>
-                                    <div class="subscribe-icon">
-                                        <img src="all_images/online_prediction.png">
-                                    </div>
+                                <div class="tittlebox3">Still Learning</div>
+                                <div class="subscribe-icon">
+                                    <img src="all_images/online_prediction.png">
                                 </div>
                             </div>
+                        
                             <div class="section-tittle-col3">
                                 <div class="images-box3">
                                     <img src="https://yt3.googleusercontent.com/nI6RnMnkCsDdzACiHLsUBoDlk5PE78K2oCgZ3Zt10GblaRq0dzcJ-BGKbvM0skIj5qaGfGznvCw=s176-c-k-c0x00ffffff-no-rj-mo"
@@ -156,6 +169,36 @@
                                     <img src="all_images/online_prediction.png">
                                 </div>
                             </div>
+                            <div class="section-tittle-col3">
+                                <div class="images-box3">
+                                    <img src="https://www.logoai.com/oss/icons/2021/12/02/oLGnWsRTbGjKoAn.png"
+                                        alt="Liked">
+                                </div>
+                                <div class="tittlebox3">SSC MAKER</div>
+                                <div class="subscribe-icon">
+                                    <img src="all_images/online_prediction.png">
+                                </div>
+                            </div>
+                            <div class="section-tittle-col3">
+                                <div class="images-box3">
+                                    <img src="https://www.logoai.com/uploads/icon/2021/09/23/dd5b2209-0f8b-4771-a38d-434f0694d728.png"
+                                        alt="Liked">
+                                </div>
+                                <div class="tittlebox3">SSC Adda247</div>
+                                <div class="subscribe-icon">
+                                    <img src="all_images/online_prediction.png">
+                                </div>
+                            </div>
+                            <div class="section-tittle-col3">
+                                <div class="images-box3">
+                                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ9cLQepDdeWTXYZ4DV4yvqmPEUj_T7yvVQkw&s"
+                                        alt="Liked">
+                                </div>
+                                <div class="tittlebox3">Rojgar LAB</div>
+                                <div class="subscribe-icon">
+                                    <img src="all_images/online_prediction.png">
+                                </div>
+                            </div>
                         </div>
                         <div class="underline1"></div>
 
@@ -172,6 +215,12 @@
                                     <img src="all_images/shopping_bag_icon.png" alt="Shopping">
                                 </div>
                                 <div class="tittlebox4">Shopping</div>
+                            </div>
+                            <div class="section-tittle-col3">
+                                <div class="images-box4">
+                                    <img src="all_images/podcasts.png" alt="Shopping">
+                                </div>
+                                <div class="tittlebox4">Podcasts</div>
                             </div>
                         </div>
                         <div class="underline1"></div>
@@ -196,7 +245,6 @@
                                 </div>
                                 <div class="tittlebox4">Send feedback</div>
                             </div>
-                            <div class="underline1"></div>
                         </div>
                     </div>
                 </aside>
@@ -212,16 +260,20 @@
                         <div class="category-item-col2">darama</div>
                         <div class="category-item-col1">mixes</div>
                         <div class="category-item-col2">Songs</div>
-                        <div class="category-item-col2">Live</div>
-                        <div class="category-item-col1">Live</div>
+                        <div class="category-item-col">Live</div>
+                        <div class="category-item-col1">wacthed</div>
                         <div class="category-item-col">History</div>
                         <div class="category-item-col1">Computer</div>
                         <div class="category-item-col1">Gadgets</div>
-                        <div class="category-item-col1">Nature</div>
+                        <div class="category-item-col">Nature</div>
+                        <div class="category-item-col">History</div>
                         <div class="category-item-col1">Products</div>
                         <div class="category-item-col1">Dubbing</div>
+                        <div class="category-item-col1">Computer</div>
+                        <div class="category-item-col1">Computer-lab</div>
+
                         <div class="category-item-col2">Trivia</div>
-                        
+
                         <div class="arrow-image-box">
                             <img src="all_images/arrow_forward.png" alt="Arrow">
                         </div>
