Changed icons and css

--- a/index.html
+++ b/index.html
@@ -266,11 +266,11 @@
                         <div class="category-item-col1">Computer</div>
                         <div class="category-item-col1">Gadgets</div>
                         <div class="category-item-col">Nature</div>
-                        <div class="category-item-col">History</div>
-                        <div class="category-item-col1">Products</div>
-                        <div class="category-item-col1">Dubbing</div>
-                        <div class="category-item-col1">Computer</div>
-                        <div class="category-item-col1">Computer-lab</div>
+                        <!-- <div class="category-item-col">History</div> -->
+                        <!-- <div class="category-item-col1">Products</div> -->
+                        <!-- <div class="category-item-col1">Dubbing</div> -->
+                        <!-- <div class="category-item-col1">Computer</div> -->
+                        <!-- <div class="category-item-col1">Computer-lab</div> -->
 
                         <div class="category-item-col2">Trivia</div>
 
