Changed somthing in css

--- a/index.html
+++ b/index.html
@@ -247,6 +247,7 @@
                                 </div>
                                 <div class="tittlebox4">Send feedback</div>
                             </div>
+                            <div class="underline1"></div>
                         </div>
                     </div>
                 </aside>
