Changed in images

--- a/index.html
+++ b/index.html
@@ -578,7 +578,7 @@
                                             alt="Thumbnail">
                                     </div>
                                     <div class="image-information">
-                                        <div class="image-title">Kathak Dance with Colored.</div>
+                                        <div class="image-title">Sanam Teri Kasam</div>
                                         <div class="chainnel-name">SET India</div>
                                         <div class="views-status">23.67M views</div>
                                     </div>
