--- a/index.html
+++ b/index.html
@@ -256,19 +256,22 @@
                     <div class="category-grid-row">
                         <div class="category-item-all">All</div>
                         <div class="category-item-col">Gaming</div>
-                        <div class="category-item-col">Trivia</div>
-                        <div class="category-item-col">Satire</div>
+                        <div class="category-item-col2">Trivia</div>
+                        <div class="category-item-col2">Satire</div>
                         <div class="category-item-col2">Movies</div>
                         <div class="category-item-col">Chess</div>
                         <div class="category-item-col2">darama</div>
                         <div class="category-item-col2">mixes</div>
                         <div class="category-item-col2">Songs</div>
-                        <div class="category-item-col">Live</div>
+                        <div class="category-item-col2">Live</div>
                         <div class="category-item-col1">wacthed</div>
                         <div class="category-item-col2">History</div>
                         <div class="category-item-col1">Computer</div>
                         <div class="category-item-col1">Gadgets</div>
                         <div class="category-item-col1">Nature</div>
+                        <div class="category-item-col">musicals</div>
+                        <div class="category-item-col">Nigam</div>
+                        <div class="category-item-col">Auditions</div>
                         <div class="arrow-image-box">
                             <img src="all_images/arrow_forward.png" alt="Arrow">
                         </div>
